--- a/BUILD.gn
+++ b/BUILD.gn
@@ -31,6 +31,7 @@ group("default") {
   if (pw_build_host_tools) {
     deps += [ ":host_tools" ]
   }
+  deps += [ "app" ]
 }
 
 group("host_tools") {
