--- a/app/BUILD.gn
+++ b/app/BUILD.gn
@@ -1,7 +1,18 @@
 import("$dir_pw_build/pw_executable.gni")
+import("$dir_pw_unit_test/test.gni")
 import("$dir_pw_docgen/docs.gni")
 
 pw_executable("app") {
   sources = [ "app.cc" ]
   deps = [ "$dir_pw_log" ]
+}
+
+pw_test_group("tests") {
+  tests = [ ":app_test" ]
+}
+
+pw_test("app_test") {
+  sources = [
+    "app_test.cc",
+  ]
 }
